[package]
name = "cubiculum"
version = "0.1.5"
authors = ["Yury V. Malovichko <iurii.malovichko@gmail.com>"]
resolver = "2"
edition = "2021"
license = "MIT"
description = "Parse and modify sequence annotation data in BED format"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }

[[bin]]
edition = "2021"
name = "bed12ToFraction"
path = "src/bin/bed12ToFraction.rs"