[package]
name = "cubiculum"
version = "0.1.16"
authors = ["Yury V. Malovichko <iurii.malovichko@gmail.com>"]
resolver = "2"
edition = "2021"
license = "MIT"
description = "Parse and modify sequence annotation data in BED format"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
fxhash = "0.2.1"
num-traits = "0.2.19"

[[bin]]
edition = "2021"
name = "bed12ToFraction"
path = "src/bin/bed12ToFraction.rs"
